[gd_scene load_steps=19 format=3 uid="uid://s6iuq31py2aw"]

[ext_resource type="Script" path="res://hud.gd" id="1_6bblr"]
[ext_resource type="FontFile" uid="uid://bp8e0gv3yk4uu" path="res://assets/fonts/font_score.ttf" id="1_7xh1o"]
[ext_resource type="Texture2D" uid="uid://ds2f8a3errutd" path="res://assets/sprites/button_pause.png" id="2_yh7kt"]
[ext_resource type="Texture2D" uid="uid://5lafhutbt07c" path="res://assets/sprites/button_resume.png" id="3_qjanq"]
[ext_resource type="Texture2D" uid="uid://djjhc72fyeukq" path="res://assets/sprites/label_get_ready.png" id="4_ptyqo"]
[ext_resource type="Texture2D" uid="uid://dhf6g7d42uf5g" path="res://assets/sprites/instructions.png" id="5_2qs1l"]
[ext_resource type="Texture2D" uid="uid://c7uixhdyoor1x" path="res://assets/sprites/label_game_over.png" id="7_sa7wr"]
[ext_resource type="Script" path="res://GameOver.gd" id="8_i3yad"]
[ext_resource type="Texture2D" uid="uid://dvbsvybc8xnkd" path="res://assets/sprites/panel_score.png" id="8_qbmwi"]
[ext_resource type="Texture2D" uid="uid://cvi2jxvvr8y3h" path="res://assets/sprites/button_play_normal.png" id="9_w6u71"]
[ext_resource type="Texture2D" uid="uid://crsq31ytk5ktt" path="res://assets/sprites/button_play_pressed.png" id="10_eak4t"]
[ext_resource type="Script" path="res://ScoreLeaderboard.gd" id="10_l1xi6"]
[ext_resource type="PackedScene" uid="uid://jrecvn7j4rq2" path="res://medal.tscn" id="11_phxc1"]
[ext_resource type="Texture2D" uid="uid://xi3ifjpwpp25" path="res://assets/sprites/button_score_normal.png" id="11_xjmre"]
[ext_resource type="Texture2D" uid="uid://cnnkblnpfqaxu" path="res://assets/sprites/label_new.png" id="12_5s74f"]
[ext_resource type="Script" path="res://LerpScore.gd" id="12_6lau8"]
[ext_resource type="Texture2D" uid="uid://dp4acloiji6kh" path="res://assets/sprites/button_score_pressed.png" id="12_jfdhg"]
[ext_resource type="Texture2D" uid="uid://etfwiqqvimci" path="res://assets/sprites/button_menu.png" id="18_dxkvh"]

[node name="HUD" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_6bblr")

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 21.0
offset_bottom = 62.0
grow_horizontal = 2
size_flags_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("1_7xh1o")
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1

[node name="GetReadyMessage" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 44.0
offset_top = 158.0
offset_right = 343.0
offset_bottom = 230.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("4_ptyqo")
expand_mode = 2
stretch_mode = 5

[node name="PressToPlayMessage" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 86.0
offset_top = 370.0
offset_right = 294.0
offset_bottom = 549.0
size_flags_horizontal = 4
texture = ExtResource("5_2qs1l")

[node name="GameOver" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.5
offset_top = 223.0
offset_right = 141.5
offset_bottom = 316.0
grow_horizontal = 2
texture = ExtResource("7_sa7wr")
script = ExtResource("8_i3yad")

[node name="ScoreLeaderboard" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = 347.5
offset_right = 156.0
offset_bottom = 516.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_qbmwi")
script = ExtResource("10_l1xi6")

[node name="Medal" parent="Control/ScoreLeaderboard" instance=ExtResource("11_phxc1")]
layout_mode = 0
offset_left = 30.5
offset_top = 58.5
offset_right = 101.5
offset_bottom = 128.5

[node name="Score" type="Label" parent="Control/ScoreLeaderboard"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 260.5
offset_top = 46.5
offset_right = -27.5
offset_bottom = 85.5
grow_horizontal = 2
size_flags_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("1_7xh1o")
theme_override_font_sizes/font_size = 38
text = "0"
horizontal_alignment = 1
script = ExtResource("12_6lau8")

[node name="BestScore" type="Label" parent="Control/ScoreLeaderboard"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 240.5
offset_top = 108.5
offset_right = -7.5
offset_bottom = 147.5
grow_horizontal = 2
size_flags_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("1_7xh1o")
theme_override_font_sizes/font_size = 38
text = "9"
horizontal_alignment = 1

[node name="NewBest" type="TextureRect" parent="Control/ScoreLeaderboard"]
texture_filter = 1
layout_mode = 0
offset_left = 195.0
offset_top = 88.0
offset_right = 233.0
offset_bottom = 106.0
texture = ExtResource("12_5s74f")

[node name="HBoxButtons" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = 551.0
offset_right = 124.5
offset_bottom = 617.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="Control/HBoxButtons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("9_w6u71")
texture_pressed = ExtResource("10_eak4t")
stretch_mode = 0

[node name="LeaderBoardButton" type="TextureButton" parent="Control/HBoxButtons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("11_xjmre")
texture_pressed = ExtResource("12_jfdhg")
stretch_mode = 0

[node name="Overlay" type="CanvasLayer" parent="Control"]

[node name="ColorRect" type="ColorRect" parent="Control/Overlay"]
offset_right = 393.0
offset_bottom = 852.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.556863)

[node name="PauseButton" type="TextureButton" parent="Control/Overlay"]
texture_filter = 1
offset_left = 25.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 66.0
size_flags_horizontal = 2
texture_normal = ExtResource("2_yh7kt")
stretch_mode = 0

[node name="PlayButton" type="TextureButton" parent="Control/Overlay"]
process_mode = 2
visible = false
texture_filter = 1
offset_left = 25.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 66.0
size_flags_horizontal = 2
texture_normal = ExtResource("3_qjanq")
stretch_mode = 0

[node name="MenuButton" type="TextureButton" parent="Control/Overlay"]
process_mode = 2
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -20.0
offset_right = 62.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("18_dxkvh")
stretch_mode = 0

[connection signal="score_count_done" from="Control/ScoreLeaderboard/Score" to="." method="_on_score_score_count_done"]
[connection signal="pressed" from="Control/HBoxButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Control/Overlay/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Control/Overlay/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/Overlay/MenuButton" to="." method="_on_menu_button_pressed"]
